[package]
name = "sqrrlc"
version = "0.2.0"
authors = ["Alexander Mennborg <alexander.mennborg@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
macros = { path = "./tools/macros" }
termcolor = "1.0.5"
unicode-width = "0.1.5"
simple_logger = "1.4.0"
clap = "2.33.0"
log = "0.4"