[package]
name = "sqrrl"
version = "0.1.0"
authors = ["Alexander Mennborg <alexander.mennborg@gmail.com>"]
edition = "2018"
publish = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
nom = "5"
termcolor = "1"
nom_locate = "1"
simple_logger = "1.4.0"
clap = "2.33.0"
log = "0.4"
