[package]
name = "first"
version = "0.1.0"
authors = ["Alexander Mennborg <alexander.mennborg@gmail.com>"]
edition = "2018"
publish = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
nom = "5"
termcolor = "1"
nom_locate = "1"
string-interner = "0.12.1"
simple_logger = "1.4.0"
clap = "2.33.0"
log = "0.4"
backtrace = "0.3.55"
# inkwell = { git = "https://github.com/TheDan64/inkwell", branch = "master", features = ["llvm11-0"] }

[target.'cfg(windows)'.dependencies]
winapi = { version = "0.3", features = ["winuser", "debugapi"] }
kernel32-sys = "0.2.2"

[target.'cfg(unix)'.dependencies]
libc = "0.2.85"
