[package]
name = "d7050e"
version = "0.1.0"
authors = ["Aleman778 <alexander.mennborg@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[workspace]
members = [
    "a01_addition",
    "a02_parser",
]

[dependencies]
nom = "5"
nom_locate = "1"