[package]
name = "compile_test"
version = "0.1.0"
authors = ["Alexander Mennborg <alexander.mennborg@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
quote = "0.6"
syn = { version="^0.15", features=["full"] }
proc-macro2 = "^0.4"

[lib]
proc-macro = true